2001-12-05  Tambet Ingo  <tambet@ximian.com>

	* font.pl.in: Removed big chunks of old code.
	(x_add_font): Fixed a bug which prevented
	installing truetype fonts.
	(xfs_add_fontpath): Implement.

2001-12-04  Tambet Ingo  <tambet@ximian.com>

	* Makefile.am (EXTRA_DIST): Added type1inst to build.
	* type1inst: new file.
	* font.pl.in: Now it's able to install font to X and
	gnome-print. Font systems syncronisation work too.
	(font_file_del): Disabled font deletion for now.
	(font_remove): Ditto.

	* font-conf.in: Removed debians from supported list since
	we don't support xfs-tt yet. 
	(set): Enabled it.

2001-11-29  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot.pl.in: s/image/entry/ bugs: some "image" strs were
	not supposed to be changed. :)

	* xml.pl.in (xst_xml_print_hash): minor comment update.

	* partition.pl.in (xst_partition_scan_info): Moved to the
	top (scrolling past the id table is annoying).

	* network.pl.in (xst_network_get_parse_table): Use the bare
	numbers for parse_trivial entries: no need for quotes.

	* boot-conf.in (xml_print): Removed unused scalars. Print
	partition info.

	* boot.pl.in (xst_boot_conf_get): Parse pixmap support
	and pixmap file. mandrake-7.2's own table.

	* boot-grub.pl.in (xst_boot_grub_parse_type): Part of
	the hack below.
	(xst_boot_grub_parse_pixmap): splashimage support.

	* boot.pl.in (xst_boot_entries_get): Hack to pass
	partition info into the entries parse table.
	(xst_boot_get_entries_parse_table): Part of the hack.

2001-11-28  Arturo Espinosa Aldama  <arturo@ximian.com>

	* boot.pl.in (xst_boot_entries_get): pass param of where
	the grub.conf file is to the entries_get proc.
	
	Use double quotes instead of single for hash indexes and
	table entries: this makes string search easier.

	* boot-grub.pl.in: fixed a lot of bugs. Implemented missing
	grub functions: image, other, append.

2001-11-28  Hans Petter Jansson  <hpj@ximian.com>

	* filesys.pl.in (xst_filesys_mount_sync_all): Use the